==> gargum/ESP-BLE-HID/src/drivers/OLED/OLED.cpp <==
#include <Arduino.h>
#include "OLED.h"

void OLED::i2c_start()
{
    while (!digitalRead(sda_pin) || !digitalRead(scl_pin));
    digitalWrite(sda_pin, LOW);
    pinMode(sda_pin, OUTPUT);
    OLED_I2C_DELAY;
    digitalWrite(scl_pin, LOW);
    pinMode(scl_pin, OUTPUT);
    OLED_I2C_DELAY;
}

void OLED::i2c_stop()
{
    pinMode(scl_pin, INPUT);
    digitalWrite(scl_pin, HIGH);
    OLED_I2C_DELAY;
    pinMode(sda_pin, INPUT);
    digitalWrite(sda_pin, HIGH);
    OLED_I2C_DELAY;
    while (!digitalRead(sda_pin) || !digitalRead(scl_pin));
}

bool OLED::i2c_send(uint8_t byte)
{
    for (int_fast8_t bit = 7; bit >= 0; bit--)
    {
        if (byte & 128) {
          pinMode(sda_pin, INPUT);
          digitalWrite(sda_pin, HIGH);
        } else {
          digitalWrite(sda_pin, LOW);
          pinMode(sda_pin, OUTPUT);
        }
        OLED_I2C_DELAY;
        pinMode(scl_pin, INPUT);
        digitalWrite(scl_pin, HIGH);        
        OLED_I2C_DELAY;
        while (!digitalRead(scl_pin)); 
        digitalWrite(scl_pin, LOW);
        pinMode(scl_pin, OUTPUT);
        OLED_I2C_DELAY;
        byte = byte << 1;
    }
    pinMode(sda_pin, INPUT);
    digitalWrite(sda_pin, HIGH);
    pinMode(scl_pin, INPUT);
    digitalWrite(scl_pin, HIGH);    
    OLED_I2C_DELAY;
    while (!digitalRead(scl_pin)); 
    bool ack = digitalRead(sda_pin) == 0;    
    digitalWrite(scl_pin, LOW);
    pinMode(scl_pin, OUTPUT);
    OLED_I2C_DELAY;
    return ack;
}

void OLED::begin()
{

    pinMode(sda_pin, INPUT);
    pinMode(scl_pin, INPUT);
    
    delay(100);
    i2c_start();
    i2c_send(i2c_address << 1);
    i2c_send(0x00);
    i2c_send(0xAE);
    i2c_send(0xD5);
    i2c_send(0x80); 
    i2c_send(0xA8);
    i2c_send(63); 
    i2c_send(0xD3);
    i2c_send(0x00); 
    i2c_send(0x40);
    i2c_send(0x8D);
    i2c_send(0x14); 
    i2c_send(0x20);
    i2c_send(0x00); 
    i2c_send(0xA1);
    i2c_send(0xC8);
    i2c_send(0xDA);
    i2c_send(0x12); 
    i2c_send(0x81);
    i2c_send(0x80);
    i2c_send(0xD9);
    i2c_send(0x22); 
    i2c_send(0xDB);
    i2c_send(0x20); 
    i2c_send(0xA4);
    i2c_send(0xA6);
    i2c_send(0x2E);
    i2c_stop();
    delay(100);

    clear();
    display();
    set_power(true);
}

void OLED::display()
{
    uint16_t index = 0;
    for (uint_fast8_t page = 0; page < pages; page++)
    {
        i2c_start();
        i2c_send(i2c_address << 1);
        i2c_send(0x00);
        if (displayController == CTRL_SH1106)
        {
            i2c_send(0xB0 + page);
            i2c_send(0x00);
            i2c_send(0x10);
        }
        else
        {
            i2c_send(0xB0 + page);
            i2c_send(0x21);
            i2c_send(0x00);
            i2c_send(127);
        }
        i2c_stop();

        i2c_start();
        i2c_send(i2c_address << 1);
        i2c_send(0x40);
        if(usingOffset){
            i2c_send(0);
            i2c_send(0);
        }
        for (uint_fast8_t column = 0; column < 128; column++)
        {
            i2c_send(buffer[index++]);
        }
        i2c_stop();
        yield();
    }
}
